# aiatl2025

./: CHANGES.md  README.md  key_moments_detected.json  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/choose-game/: page.tsx
app/components/: CodeReviewPanel.tsx  HighlightsPanel.tsx  IDEEditor.tsx  PRGenerator.tsx  SessionList.tsx  TranscriptView.tsx  UnifiedTranscript.tsx  VideoRecorder.tsx
app/forum/: MemeFeed.tsx  ThreadList.tsx  ThreadModal.tsx  forum.module.css
app/lib/: gemini-config.ts  gemini-highlights.ts  gemini-pr-generator.ts  gemini-transcription.ts  git.ts  github.ts
app/main-view/: page.tsx
app/test-ide/: page.tsx
app/types/: index.ts
app/video-player/: page.tsx
components/: TwitterFeed.tsx  game-event-tracker.tsx  timeline.tsx  video-player.tsx
components/ui/: dialog.tsx
data/: forum.json
fastapi/: KEY_MOMENT_DETECTION.md  pyproject.toml  run_key_moment_detection.py  test_audio_sentiment.py  test_wav_extraction.py
fastapi/app/: key_moments_detected.json  main.py
fastapi/app/modules/: audio_sentiment.py  key_moment_detector.py  scoring.py  stream.py
lib/: social-content.ts  utils.ts
nextjs/: next.config.ts  package-lock.json  package.json
nextjs/app/: layout.tsx  page.tsx
nextjs/components/: TwitterFeed.tsx  key-moment-popup.tsx  messages-panel.tsx  timeline.module.css  timeline.tsx  video-player.tsx
nextjs/data/: forum.json
research/: .gitignore  pyproject.toml
research/src/: audio_segmenter.py  chunk_plays.py  main.py  models.py  stream.py
scripts/: agent.js
shared/: game-events.ts
(+33 files in other folders)
