[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["Dheeraj Thota <10102005dt@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.121.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
python-multipart = "^0.0.20"
pydantic = "^2.12.4"
pydantic-settings = "^2.11.0"
ipykernel = "^7.1.0"
librosa = "^0.11.0"
matplotlib = "^3.10.7"
nflreadpy = "^0.1.4"
nltk = "^3.9.2"
numpy = "^2.2.6"
pandas = "^2.3.3"
scikit-learn = "^1.7.2"
sentence-transformers = "^5.1.2"
torchaudio = "^2.9.0"
tqdm = "^4.67.1"
transformers = "^4.57.1"
yt-dlp = "^2025.10.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
